--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,4 @@
 /KL-Planner/cmake-build-debug/CMakeFiles/3.16.5/CompilerIdC/tmp/
 /KL-Planner/cmake-build-debug/CMakeFiles/3.16.5/CompilerIdCXX/
 /KL-Planner/cmake-build-debug/CMakeFiles/3.16.5/CompilerIdCXX/tmp/
+/KL-Planner/cmake-build-debug/
