--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,4 @@
 /KL-Planner/cmake-build-debug/CMakeFiles/3.16.5/CompilerIdCXX/
 /KL-Planner/cmake-build-debug/CMakeFiles/3.16.5/CompilerIdCXX/tmp/
 /KL-Planner/cmake-build-debug/
+/KL-PLanner/.idea
