Umbenennung von Pruefung in Klausur

--- a/KL-Planner/CMakeLists.txt
+++ b/KL-Planner/CMakeLists.txt
@@ -3,4 +3,4 @@ project(KL_Planner)
 
 set(CMAKE_CXX_STANDARD 14)
 
-add_executable(KL_Planner main.cpp Raum.cpp Raum.h Pruefung.cpp Pruefung.h Anmeldung.cpp Anmeldung.h Student.cpp Student.h Professor.cpp Professor.h ReadInput.cpp ReadInput.h Utility.cpp Utility.h)
+add_executable(KL_Planner main.cpp Raum.cpp Raum.h Klausur.cpp Klausur.h Anmeldung.cpp Anmeldung.h Student.cpp Student.h Professor.cpp Professor.h ReadInput.cpp ReadInput.h Utility.cpp Utility.h)
